# amsn

amsn/: .gitignore  AGREEMENT  AppMain.tcl  BWidget_mods.tcl  CREDITS  Compile.mk  FAQ  FAQ.html  FAQ_es  HELP  INSTALL  LEEME  Makefile  Makefile.in  README  README.macosx  TODO  abook.tcl  addressbook.tcl  alarm.tcl  amsn  amsn-remote  amsn-remote-CLI  amsn.coralys  amsn.debianmenu  amsn.desktop  amsn.spec  amsn.spec.README.fedora  amsn.tcl  amsn_des.tcl  amsncore.tcl  anigif.tcl  assistant.tcl  audio.tcl  auth.tcl  autogen.sh  automsg.tcl  autoupdate.tcl  balloon.tcl  blocking.tcl  (+70 more)
amsn/aMSN.xcodeproj/: project.pbxproj  tom.pbxuser  tom.perspective
amsn/autopackage/: default.apspec
amsn/autopackage/@tcl.sourceforge.net/tcl/: skeleton.1
amsn/autopackage/@tcl.sourceforge.net/tk/: skeleton.1
amsn/ca-certs/: 37621ded.0  6e7f22c1.0  75ced341.0  874806e2.0  README
amsn/debian/: changelog.in  control  control.in  copyright  dirs  package.postinst  package.postrm  rules
amsn/docs/: DOCS-HOWTO  FAQbs  FAQca  FAQde  FAQdu  FAQee  FAQel  FAQes  FAQfr  FAQfr.html  FAQfr_ca  FAQfu  FAQfur  FAQhu  FAQit  FAQlt  FAQmn  FAQnl  FAQno  FAQpt  FAQpt_BR  FAQsi  FAQsl  FAQsw  FAQtr  FAQva  HELPca  HELPcs  HELPda  HELPde  HELPee  HELPes  HELPfr  HELPfr_ca  HELPfu  HELPfur  HELPgr  HELPhu  HELPit  HELPlt  (+33 more)
amsn/lang/: LANG-HOWTO  addkey.tcl  complete.pl  convert.tcl  dups.sh  errors.py  genlangfiles.c  genpage.c  lang1.tmpl  lang2.tmpl  langaf  langal  langar  langast  langbg  langbn  langbr  langbs  langca  langca_VC  langchk.sh  langcs  langcy  langda  langde  langee  langei  langel  langen  langeo  langes  langeu  langfi  langfr  langfr_CA  langfr_ca  langfri  langfur  langga  langglg  (+41 more)
amsn/msnp2p/: constants.tcl  filetransfer.tcl  message.tcl  msnobject.tcl  p2p.tcl  session.tcl  session_manager.tcl  slp.tcl  sourcefiles.tcl  webcam.tcl
amsn/msnp2p/transport/: TLP.tcl  TLPv1.tcl  TLPv2.tcl  base.tcl  constants.tcl  direct.tcl  switchboard.tcl  transport_manager.tcl
amsn/plugins/ColoredNicks/: colorednicks.tcl  plugininfo.xml
amsn/plugins/ColoredNicks/lang/: langde  langen  langes  langfr  langhu  langit  langja  langlt  langnl  langno  langpt_BR  langtr
amsn/plugins/MSNGameTTT/: GameTTT.tcl  plugininfo.xml
amsn/plugins/MSNGameTTT/lang/: langde  langen  langes  langfr  langhu  langja  langlt  langnl  (+3 more)
amsn/plugins/Notes/: notes.tcl  plugininfo.xml
amsn/plugins/Nudge/: Nudge.tcl  desc.txt  plugin.tcl  plugininfo.xml
amsn/plugins/PowerTool/: plugininfo.xml  powertool.tcl
amsn/plugins/Restore/: plugininfo.xml  restore.tcl
amsn/plugins/SearchContact/: plugininfo.xml  searchcontact.tcl
amsn/plugins/SkinColor/: plugininfo.xml
amsn/plugins/WebcamShooter/: camshoot.tcl  plugininfo.xml
amsn/plugins/inkdraw/: inkdraw.tcl  plugininfo.xml
amsn/plugins/music/: display_and_send.scpt  infoamarok2  infoaudacious  infocog.scpt  infoexaile  infogmusicbrowser  infolastfm  infolisten  infomoc  infompris  inforhythmbox  infosongbird  infospotify  infovlc  music.tcl  plugininfo.xml
amsn/plugins/remind/: plugininfo.xml  remind.tcl
amsn/plugins/winks/: README.txt  plugininfo.xml  winks.tcl
amsn/skins/default/: TODO  desc.txt  settings.xml  smileys.tcl
amsn/utils/: amsn-installer  amsnctl.pl  ca-certificates.crt  cam_to_avi.sh  checklang  itunes.scpt  make_amsn_release.sh  qtplay  update-amsn.sh
amsn/utils/BWidget-1.7.0/: color.tcl  dialog.tcl  font.tcl  notebook.tcl  pkgIndex.tcl  scrollframe.tcl  scrollw.tcl  widget.tcl
amsn/utils/BWidget-1.9.0/: font.tcl
amsn/utils/Tclxml/: pkgIndex.tcl  sgmlparser.tcl
amsn/utils/TkCximage/: Makefile.in  Rules.mk  TkCximage-8.5.dylib  TkCximage.dylib  configure  configure.in  pkgIndex.tcl  pkgIndex.tcl.in  readme.txt
amsn/utils/amsn-extras/: extras.tcl  os_base.tcl  os_mac.tcl  pkgIndex.tcl
amsn/utils/asyncresolver/: ASYNCRESOLVER.dsp  ASYNCRESOLVER.dsw  Makefile  Rules.mk  asyncresolver.c  asyncresolver.tcl  libasyncresolver.dylib  pkgIndex.tcl
amsn/utils/base64/: base64.tcl  uuencode.tcl  yencode.tcl
amsn/utils/bwidget1.8.0/: scrollframe.tcl
amsn/utils/combobox/: pkgIndex.tcl
amsn/utils/contentmanager/: contentmanager.tcl  pkgIndex.tcl
amsn/utils/dpbrowser/: dpbrowser.tcl  pkgIndex.tcl
amsn/utils/drawboard/: drawboard.tcl  pkgIndex.tcl
amsn/utils/farsight/: Makefile  Rules.mk  farsight.c  farsight.macppc  pkgIndex.tcl  tcl_farsight.dylib
amsn/utils/framec/: framec.tcl  pkgIndex.tcl
amsn/utils/gupnp/: Rules.mk  gupnp.c  gupnp.h  pkgIndex.tcl
amsn/utils/http/: http.tcl
amsn/utils/libaio/: Makefile.am  aio.pc.in  autogen.sh  configure.ac
amsn/utils/macosx/: cabextract  cp_gstreamer.sh  finishbuild.sh  gst_files.txt  sndplay  startbuild.sh
amsn/utils/pixmapbutton/: button.tcl  checkbutton.tcl  pixmapbutton.tcl  pkgIndex.tcl  radiobutton.tcl  test.tcl
amsn/utils/pixmapmenu/: bindings.tcl  entries.tcl  makecommands.tcl  menushell.tcl  pixmapmenu.tcl  pkgIndex.tcl
amsn/utils/pixmapoption/: pixmapoption.tcl  pkgIndex.tcl  test.tcl
amsn/utils/pixmapprogbar/: pixmapprogbar.tcl  test.tcl
amsn/utils/pixmapscroll/: pixmapscroll.tcl  pkgIndex.tcl  test.tcl
amsn/utils/scalable-bg/: pkgIndex.tcl  scalable-bg.tcl  test.tcl
amsn/utils/sexytile/: pkgIndex.tcl  sexytile.tcl  testlines.tcl
amsn/utils/snit/: pkgIndex.tcl  snit.tcl  snit2.tcl
amsn/utils/tclISF/: Rules.mk  pkgIndex.tcl  tclISF.dylib
amsn/utils/tcl_siren/: Rules.mk  Tcl_siren.dsp  Tcl_siren.dsw  pkgIndex.tcl  tcl_siren.dylib  tcl_siren.sln  tcl_siren.vcproj
amsn/utils/tcldom/: dom.tcl  pkgIndex.tcl  xmlswitch.tcl
amsn/utils/tclsoap1.6.7/: LICENSE  SOAP-CGI.tcl  SOAP-domain.tcl  SOAP.tcl  beep.tcl  http.tcl  https.tcl  pkgIndex.tcl  rpcvar.tcl  utils.tcl  xpath.tcl
amsn/utils/tksoundmixer/: pkgIndex.tcl  test.tcl  tksoundmixer.tcl
amsn/utils/toolbar/: toolbar.tcl
amsn/utils/traydock/: README  configure  tray.c
amsn/utils/voipcontrols/: pkgIndex.tcl  test.tcl  voipcontrols.tcl
amsn/utils/webcamsn/: Makefile.am  Makefile.in  Rules.mk  aclocal.m4  configure  configure.ac  libmimic.pc.in  pkgIndex.tcl  webcamsn.dylib  webcamsn.tcl
(+1162 files in other folders)
